[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/user-interface/culprit-menu/culprit-menu.gd" type="Script" id=1]
[ext_resource path="res://addons/dialogic/Documentation/Theme/Font/NotoSans-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://addons/dialogic/Documentation/Theme/Font/NotoSans-Regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 35
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 3 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer"]
margin_left = 128.0
margin_right = 128.0

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/UI"]
margin_left = 10.0
margin_top = 10.0
margin_right = 91.0
margin_bottom = 50.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 5
size_flags_vertical = 5
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="ButtonOpenCulpritMenu" type="Button" parent="CanvasLayer/UI/MarginContainer"]
physics_interpolation_mode = 1
margin_left = 10.0
margin_top = 10.0
margin_right = 71.0
margin_bottom = 30.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Culprits"
align = 0

[node name="CulpritMenu" type="Control" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/CulpritMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/CulpritMenu/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 580.0
color = Color( 0.705882, 0.196078, 0.196078, 0.894118 )

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/CulpritMenu/MarginContainer/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="CulpritMenuBody" type="VBoxContainer" parent="CanvasLayer/CulpritMenu/MarginContainer/ColorRect/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 964.0
margin_bottom = 540.0

[node name="SelectedCulprit" type="HBoxContainer" parent="CanvasLayer/CulpritMenu/MarginContainer/ColorRect/MarginContainer/CulpritMenuBody"]
margin_right = 944.0
margin_bottom = 492.0
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/CulpritMenu/MarginContainer/ColorRect/MarginContainer/CulpritMenuBody/SelectedCulprit"]
margin_right = 300.0
margin_bottom = 492.0
rect_min_size = Vector2( 300, 0 )

[node name="CulpritImage" type="TextureRect" parent="CanvasLayer/CulpritMenu/MarginContainer/ColorRect/MarginContainer/CulpritMenuBody/SelectedCulprit/MarginContainer"]
physics_interpolation_mode = 1
margin_right = 300.0
margin_bottom = 492.0
stretch_mode = 6

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/CulpritMenu/MarginContainer/ColorRect/MarginContainer/CulpritMenuBody/SelectedCulprit"]
margin_left = 304.0
margin_right = 944.0
margin_bottom = 492.0
rect_min_size = Vector2( 640, 0 )

[node name="CulpritText" type="VBoxContainer" parent="CanvasLayer/CulpritMenu/MarginContainer/ColorRect/MarginContainer/CulpritMenuBody/SelectedCulprit/MarginContainer2"]
margin_top = 175.0
margin_right = 640.0
margin_bottom = 317.0
grow_horizontal = 0
grow_vertical = 0
size_flags_vertical = 4

[node name="CulpritLabel" type="Label" parent="CanvasLayer/CulpritMenu/MarginContainer/ColorRect/MarginContainer/CulpritMenuBody/SelectedCulprit/MarginContainer2/CulpritText"]
margin_right = 640.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 1 )

[node name="CulpritDescription" type="Label" parent="CanvasLayer/CulpritMenu/MarginContainer/ColorRect/MarginContainer/CulpritMenuBody/SelectedCulprit/MarginContainer2/CulpritText"]
margin_top = 53.0
margin_right = 640.0
margin_bottom = 88.0
custom_fonts/font = SubResource( 2 )
autowrap = true

[node name="CulpritHint1" type="Label" parent="CanvasLayer/CulpritMenu/MarginContainer/ColorRect/MarginContainer/CulpritMenuBody/SelectedCulprit/MarginContainer2/CulpritText"]
margin_top = 92.0
margin_right = 640.0
margin_bottom = 106.0

[node name="CulpritHint2" type="Label" parent="CanvasLayer/CulpritMenu/MarginContainer/ColorRect/MarginContainer/CulpritMenuBody/SelectedCulprit/MarginContainer2/CulpritText"]
margin_top = 110.0
margin_right = 640.0
margin_bottom = 124.0

[node name="CulpritHint3" type="Label" parent="CanvasLayer/CulpritMenu/MarginContainer/ColorRect/MarginContainer/CulpritMenuBody/SelectedCulprit/MarginContainer2/CulpritText"]
margin_top = 128.0
margin_right = 640.0
margin_bottom = 142.0

[node name="CulpritList" type="HBoxContainer" parent="CanvasLayer/CulpritMenu/MarginContainer/ColorRect/MarginContainer/CulpritMenuBody"]
margin_top = 496.0
margin_right = 944.0
margin_bottom = 496.0
alignment = 1

[node name="CulpritMenuActions" type="HBoxContainer" parent="CanvasLayer/CulpritMenu/MarginContainer/ColorRect/MarginContainer/CulpritMenuBody"]
margin_top = 500.0
margin_right = 944.0
margin_bottom = 520.0
alignment = 2

[node name="ButtonCloseCulpritMenu" type="Button" parent="CanvasLayer/CulpritMenu/MarginContainer/ColorRect/MarginContainer/CulpritMenuBody/CulpritMenuActions"]
margin_left = 857.0
margin_right = 944.0
margin_bottom = 20.0
text = "Close Menu"
